Includes all the changes from the code review with janardan. The jam data array is now an array of objects instead of a multi dimensional array.

--- a/Sideline Stats/Base.lproj/Main.storyboard
+++ b/Sideline Stats/Base.lproj/Main.storyboard
@@ -6,7 +6,7 @@
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
-        <!--Sideline Stats-->
+        <!--Title-->
         <scene sceneID="K1T-nJ-zhm">
             <objects>
                 <viewController id="N2c-NT-0th" customClass="SidelineStats" customModule="Sideline_Stats" customModuleProvider="target" sceneMemberID="viewController">
@@ -23,6 +23,9 @@
                                 <state key="normal" title="Add new (home)">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <variation key="widthClass=compact" misplaced="YES">
+                                    <rect key="frame" x="13" y="207" width="112" height="30"/>
+                                </variation>
                                 <connections>
                                     <action selector="addHomeJammer:" destination="N2c-NT-0th" eventType="touchUpInside" id="zHu-T8-gXL"/>
                                 </connections>
@@ -32,16 +35,10 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
+                                <variation key="widthClass=compact" misplaced="YES">
+                                    <rect key="frame" x="81" y="47" width="159" height="20.5"/>
+                                </variation>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dOa-Ms-xK3">
-                                <rect key="frame" x="-23" y="-15" width="46" height="30"/>
-                                <state key="normal" title="Add new (away)">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <action selector="addAwayJammer:" destination="N2c-NT-0th" eventType="touchUpInside" id="di8-SV-zoV"/>
-                                </connections>
-                            </button>
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YqW-rm-bSc">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                                 <items>
@@ -73,7 +70,8 @@
                                         <exclude reference="PiY-KM-IXS"/>
                                     </mask>
                                 </variation>
-                                <variation key="widthClass=compact">
+                                <variation key="widthClass=compact" misplaced="YES">
+                                    <rect key="frame" x="0.0" y="257" width="74" height="30"/>
                                     <mask key="constraints">
                                         <include reference="KcU-lY-ziZ"/>
                                         <include reference="PiY-KM-IXS"/>
@@ -94,7 +92,8 @@
                                         <exclude reference="ZtU-ay-1d2"/>
                                     </mask>
                                 </variation>
-                                <variation key="widthClass=compact">
+                                <variation key="widthClass=compact" misplaced="YES">
+                                    <rect key="frame" x="168" y="258" width="71" height="30"/>
                                     <mask key="constraints">
                                         <include reference="TAI-mJ-sfg"/>
                                         <include reference="ZtU-ay-1d2"/>
@@ -116,7 +115,8 @@
                                         <exclude reference="lMJ-m7-lCr"/>
                                     </mask>
                                 </variation>
-                                <variation key="widthClass=compact">
+                                <variation key="widthClass=compact" misplaced="YES">
+                                    <rect key="frame" x="88" y="257" width="37" height="30"/>
                                     <mask key="constraints">
                                         <include reference="SL8-cX-6oV"/>
                                         <include reference="lMJ-m7-lCr"/>
@@ -141,7 +141,8 @@
                                         <exclude reference="Hy3-Um-0Kf"/>
                                     </mask>
                                 </variation>
-                                <variation key="widthClass=compact">
+                                <variation key="widthClass=compact" misplaced="YES">
+                                    <rect key="frame" x="258" y="258" width="37" height="30"/>
                                     <mask key="constraints">
                                         <include reference="0Os-MI-oMZ"/>
                                         <include reference="Hy3-Um-0Kf"/>
@@ -174,7 +175,8 @@
                                         <exclude reference="dlb-hY-oyi"/>
                                     </mask>
                                 </variation>
-                                <variation key="widthClass=compact">
+                                <variation key="widthClass=compact" misplaced="YES">
+                                    <rect key="frame" x="0.0" y="307" width="136" height="217"/>
                                     <mask key="constraints">
                                         <include reference="U0F-YS-I2v"/>
                                         <exclude reference="dlb-hY-oyi"/>
@@ -214,7 +216,8 @@
                                         <exclude reference="qMy-RO-KnC"/>
                                     </mask>
                                 </variation>
-                                <variation key="widthClass=compact">
+                                <variation key="widthClass=compact" misplaced="YES">
+                                    <rect key="frame" x="168" y="307" width="136" height="217"/>
                                     <mask key="constraints">
                                         <exclude reference="62e-Ut-cEr"/>
                                         <include reference="Lku-kQ-SDi"/>
@@ -227,8 +230,41 @@
                                     <outlet property="delegate" destination="N2c-NT-0th" id="KFT-9q-YUh"/>
                                 </connections>
                             </tableView>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hRe-MQ-8gS">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                                <color key="barTintColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <textAttributes key="titleTextAttributes">
+                                    <color key="textColor" red="0.68235294117647061" green="0.0" blue="0.86274509803921573" alpha="1" colorSpace="calibratedRGB"/>
+                                </textAttributes>
+                                <items>
+                                    <navigationItem title="JAMMERS" id="ffj-qA-Afh">
+                                        <barButtonItem key="rightBarButtonItem" title="Prefs" id="nuI-ii-S0A"/>
+                                    </navigationItem>
+                                </items>
+                                <variation key="widthClass=compact" fixedFrame="YES">
+                                    <rect key="frame" x="0.0" y="20" width="320" height="44"/>
+                                </variation>
+                            </navigationBar>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="skates" translatesAutoresizingMaskIntoConstraints="NO" id="o7h-cd-cLv">
+                                <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
+                                <variation key="widthClass=compact" fixedFrame="YES">
+                                    <rect key="frame" x="16" y="20" width="55" height="46"/>
+                                </variation>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dOa-Ms-xK3">
+                                <rect key="frame" x="-23" y="-15" width="46" height="30"/>
+                                <state key="normal" title="Add new (away)">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <variation key="widthClass=compact" misplaced="YES">
+                                    <rect key="frame" x="176" y="207" width="109" height="30"/>
+                                </variation>
+                                <connections>
+                                    <action selector="addAwayJammer:" destination="N2c-NT-0th" eventType="touchUpInside" id="di8-SV-zoV"/>
+                                </connections>
+                            </button>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="0.22352941176470589" green="0.22352941176470589" blue="0.22352941176470589" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="YqW-rm-bSc" firstAttribute="top" secondItem="0ct-EZ-sme" secondAttribute="bottom" id="4xJ-9n-uZb"/>
                             <constraint firstAttribute="trailingMargin" secondItem="YqW-rm-bSc" secondAttribute="trailing" constant="-16" id="6PD-KW-L9h"/>
@@ -261,7 +297,6 @@
                             <mask key="subviews">
                                 <exclude reference="ben-U6-Lfd"/>
                                 <exclude reference="ZEj-FA-Oke"/>
-                                <exclude reference="dOa-Ms-xK3"/>
                                 <exclude reference="YqW-rm-bSc"/>
                                 <exclude reference="Mrr-5Y-W2L"/>
                                 <exclude reference="5xc-7H-txM"/>
@@ -269,6 +304,9 @@
                                 <exclude reference="WGw-Gd-anF"/>
                                 <exclude reference="TLp-ce-nlW"/>
                                 <exclude reference="0ct-EZ-sme"/>
+                                <exclude reference="hRe-MQ-8gS"/>
+                                <exclude reference="o7h-cd-cLv"/>
+                                <exclude reference="dOa-Ms-xK3"/>
                             </mask>
                             <mask key="constraints">
                                 <exclude reference="Bgg-Zk-gU6"/>
@@ -303,7 +341,6 @@
                             <mask key="subviews">
                                 <include reference="ben-U6-Lfd"/>
                                 <include reference="ZEj-FA-Oke"/>
-                                <include reference="dOa-Ms-xK3"/>
                                 <include reference="YqW-rm-bSc"/>
                                 <include reference="Mrr-5Y-W2L"/>
                                 <include reference="5xc-7H-txM"/>
@@ -311,6 +348,9 @@
                                 <include reference="WGw-Gd-anF"/>
                                 <include reference="TLp-ce-nlW"/>
                                 <include reference="0ct-EZ-sme"/>
+                                <include reference="hRe-MQ-8gS"/>
+                                <include reference="o7h-cd-cLv"/>
+                                <include reference="dOa-Ms-xK3"/>
                             </mask>
                             <mask key="constraints">
                                 <include reference="Bgg-Zk-gU6"/>
@@ -343,6 +383,7 @@
                         </variation>
                     </view>
                     <toolbarItems/>
+                    <navigationItem key="navigationItem" title="Title" id="9Iv-N8-BN7"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
                     <connections>
                         <outlet property="awayJammerTable" destination="0ct-EZ-sme" id="n7c-ON-dO5"/>
@@ -357,7 +398,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="m3A-o8-ZDx" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="376.5" y="-322"/>
+            <point key="canvasLocation" x="376.5" y="-311"/>
         </scene>
         <!--Item 2-->
         <scene sceneID="dyR-v4-H2v">
@@ -368,6 +409,7 @@
                         <viewControllerLayoutGuide type="bottom" id="Fl7-Is-JO6"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="2ng-dg-8SZ">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="73q-No-vgo">
@@ -424,6 +466,7 @@
                         <viewControllerLayoutGuide type="bottom" id="t9y-tw-vf9"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="v5e-ue-YwD">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="rJ3-xe-pZu">
@@ -772,4 +815,7 @@
             <point key="canvasLocation" x="1596" y="-322"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="skates" width="20" height="20"/>
+    </resources>
 </document>
